tests/snapshots/options__opt_tabstop_3@001.snap
---
source: tests/options.rs
description: "input: items [\"aa\\tb\"]\noptions: --tabstop 3"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> aa b                                                                          "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
