tests/snapshots/options__opt_tabstop_default@001.snap
---
source: tests/options.rs
description: "input: items [\"a\\tb\"]\noptions: "
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a       b                                                                     "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
