tests/snapshots/options__opt_tac@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\"]\noptions: --tac"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a                                                                             "
"> b                                                                             "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
