tests/snapshots/options__opt_tac_with_header_lines.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  d                                                                             "
"> e                                                                             "
"  b                                                                             "
"  a                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
