tests/snapshots/options__opt_tac_with_header_lines@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\", \"d\", \"e\"]\noptions: --tac --header-lines 2"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  d                                                                             "
"> e                                                                             "
"  b                                                                             "
"  a                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
